--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -1,11 +1,11 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
-  - override /train/data: mid_schedule
+  - override /train/data: easy_schedule
 
 train:
   model:
-    num_experts: 4
+    num_experts: 8
     num_gpus: 1
     top_k: 2
     window_size: [ 8, 8, 8 ]
@@ -19,4 +19,4 @@ train:
   ddp: False
   num_grad_acc: 4
 
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweyefe/checkpoint.tar'
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweyefe/checkpoint_easy.tar'
