--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -5,13 +5,14 @@ defaults:
 
 train:
   model:
-    num_experts: 4
+    num_experts: 8
     num_gpus: 1
     top_k: 2
     window_size: [ 8, 8, 8 ]
+    img_size: [ 8, 64, 64 ]
 
   data:
-    batch_size: 8
+    batch_size: 4
     datasets:
       train:
         seq: 8
@@ -19,4 +20,4 @@ train:
   ddp: False
   num_grad_acc: 4
 
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweyefe/checkpoint_easy.tar'
+  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweyefe/checkpoint_easy.tar'
