--- a/conf/experiment/vrt_cl.yaml
+++ b/conf/experiment/vrt_cl.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt
-  - override /train/data: hard_schedule
+  - override /train/data: easy_schedule
 
 train:
   ddp: False
