--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
-  - override /train/data: easy_schedule
+  - override /train/data: hard_schedule
 
 train:
   model:
@@ -12,12 +12,12 @@ train:
     img_size: [ 8, 64, 64 ]
 
   data:
-    batch_size: 8
+    batch_size: 4
     datasets:
       train:
         seq: 8
 
-  ddp: False
+  ddp: True
   num_grad_acc: 4
 
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/srbgenrewn/checkpoint.tar'
+  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/srbgenrewn/checkpoint.tar'
