--- a/conf/experiment/vrt_moe_spy.yaml
+++ b/conf/experiment/vrt_moe_spy.yaml
@@ -17,4 +17,4 @@ train:
   ddp: False
   num_grad_acc: 4
 
-  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweye/checkpoint/last.ckpt'
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/whvbeo/checkpoint.tar'
