--- a/conf/experiment/vrt_moe.yaml
+++ b/conf/experiment/vrt_moe.yaml
@@ -5,18 +5,16 @@ defaults:
 train:
   model:
     num_experts: 8
-    num_gpus: 1
+    num_gpus: 2
     top_k: 2
-    window_size: [ 8, 8, 8 ]
-    img_size: [ 8, 64, 64 ]
 
   data:
-    batch_size: 8
+    batch_size: 4
     datasets:
       train:
         seq: 8
 
-  ddp: False
+  ddp: True
   num_grad_acc: 4
 
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweye/checkpoint/last.ckpt'
+  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweye/checkpoint/last.ckpt'
