--- a/conf/experiment/spynet.yaml
+++ b/conf/experiment/spynet.yaml
@@ -23,7 +23,8 @@ train:
     betas: [ 0.9, 0.99 ]
 
   scheduler:
-    eta_min: 1e-5
+    T_max: 1e9
+    eta_min: 1e-4
 
   max_epochs: [ 250, 100, 100, 100, 50 ]
   k: 5
