--- a/conf/experiment/test.yaml
+++ b/conf/experiment/test.yaml
@@ -1,8 +1,8 @@
 # @package _global_
 cfg_dir: /home/aghinassi/Desktop/checkpoints/basic_og
-lr_dir: /mnt/hdd/dataset/pexels/compressed
-hr_dir: /mnt/hdd/dataset/pexels/groundtruth
-out_dir: /mnt/hdd/dataset/pexels
+lr_dir: /home/aghinassi/Desktop/compressed
+hr_dir: /home/aghinassi/Desktop/groundtruth
+out_dir: /home/aghinassi/Desktop/hdd
 
 window_size: 32
 num_workers: 4
