--- a/conf/experiment/test.yaml
+++ b/conf/experiment/test.yaml
@@ -2,7 +2,7 @@
 cfg_dir: /home/aghinassi/Desktop/checkpoints/basic_og
 lr_dir: /home/aghinassi/Desktop/compressed
 hr_dir: /home/aghinassi/Desktop/groundtruth
-out_dir: /home/aghinassi/Desktop/hdd
+out_dir: /home/hdd/aghinassi
 
 window_size: 32
 num_workers: 4
