--- a/conf/experiment/spynet.yaml
+++ b/conf/experiment/spynet.yaml
@@ -30,5 +30,5 @@ train:
   k: 5
   start_k: 0
 
-  restore: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/oowbreta/checkpoint_0.tar"
+  restore: null #"/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/oowbreta/checkpoint_0.tar"
   finetune: False
