--- a/conf/experiment/vrt_cl.yaml
+++ b/conf/experiment/vrt_cl.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt
-  - override /train/data: mid_schedule
+  - override /train/data: easy_schedule
 
 train:
   ddp: True
@@ -10,6 +10,7 @@ train:
     betas: [ 0.9, 0.99 ]
 
   scheduler:
+    T_max: 9e5
     eta_min: 1e-6
 
   data:
@@ -18,4 +19,4 @@ train:
         seq: 6
 
   num_grad_acc: 4
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/owbgrewrg/checkpoint.tar'
+  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/owbgrewrg/checkpoint.tar'
