--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -11,6 +11,14 @@ train:
     window_size: [ 8, 8, 8 ]
     img_size: [ 8, 64, 64 ]
 
+  optimizer:
+    lr: 1e-4
+    betas: [ 0.9, 0.99 ]
+
+  scheduler:
+    T_max: 9e5
+    eta_min: 1e-6
+
   data:
     batch_size: 4
     datasets:
