--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -21,7 +21,7 @@ train:
       train:
         seq: 8
 
-  ddp: True
+  ddp: False
   num_grad_acc: 4
 
   # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/oowbgrewrg/checkpoint.tar'
