--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -10,6 +10,9 @@ train:
     top_k: 2
     window_size: [ 8, 8, 8 ]
     img_size: [ 8, 64, 64 ]
+    depths: [ 4, 4, 4, 4, 4, 4, 4 ]
+    embed_dims: [ 32, 32, 32, 32, 32, 64, 64 ]
+    num_heads: [ 4, 4, 4, 4, 4, 8, 8 ]
 
   scheduler:
     T_max: 9e5
