--- a/conf/experiment/vrt_cl.yaml
+++ b/conf/experiment/vrt_cl.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt
-  - override /train/data: easy_schedule
+  - override /train/data: mid_schedule
 
 train:
   ddp: True
@@ -19,4 +19,4 @@ train:
         seq: 6
 
   num_grad_acc: 4
-  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/owbgrewrg/checkpoint.tar'
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/huasfgelaas/checkpoint.tar'
