--- a/conf/experiment/vrt_cl.yaml
+++ b/conf/experiment/vrt_cl.yaml
@@ -20,3 +20,4 @@ train:
 
   num_grad_acc: 4
   restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/huasfgelaas/checkpoint.tar'
+  restore_opt: true
