--- a/conf/experiment/vrt_cl.yaml
+++ b/conf/experiment/vrt_cl.yaml
@@ -1,10 +1,10 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt
-  - override /train/data: mid_schedule
+  - override /train/data: easy_schedule
 
 train:
-  ddp: True
+  ddp: true
   optimizer:
     lr: 1e-4
     betas: [ 0.9, 0.99 ]
@@ -19,5 +19,5 @@ train:
         seq: 6
 
   num_grad_acc: 4
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/huasfgelaas/checkpoint.tar'
-  restore_opt: true
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/crakent/checkpoint.tar'
+  restore_opt: false
