--- a/conf/experiment/vrt_cl.yaml
+++ b/conf/experiment/vrt_cl.yaml
@@ -1,13 +1,13 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt
-  - override /train/data: easy_schedule
+  - override /train/data: mid_schedule
 
 train:
   ddp: true
 
   optimizer:
-    lr: 1e-4 # 6.7e-5, 3.4e-5
+    lr: 6.7e-5 # 1e-4, 3.4e-5
     betas: [ 0.9, 0.99 ]
 
   scheduler:
@@ -20,5 +20,5 @@ train:
         seq: 6
 
   num_grad_acc: 4
-  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/crakent/checkpoint.tar'
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/crakent/checkpoint.tar'
   restore_opt: false
