--- a/conf/experiment/vrt_moe.yaml
+++ b/conf/experiment/vrt_moe.yaml
@@ -3,18 +3,32 @@ defaults:
   - override /train/model: baby_vrt_moe
 
 train:
+  ddp: false
+
   model:
-    num_experts: 4
-    num_gpus: 2
+    num_experts: 4 # TODO: 8 experts
+    num_gpus: 1
     top_k: 2
+    window_size: [ 8, 8, 8 ]
+    img_size: [ 8, 64, 64 ]
+    depths: [ 4, 4, 4, 4, 4, 8, 8 ]
+    embed_dims: [ 64, 64, 64, 64, 64, 128, 128 ]
+    num_heads: [ 4, 4, 4, 4, 4, 8, 8 ]
+
+  optimizer:
+    lr: 1e-4
+    betas: [ 0.9, 0.99 ]
+
+  scheduler:
+    T_max: 9e5
+    eta_min: 1e-6
 
   data:
-    batch_size: 4
+    batch_size: 8
     datasets:
       train:
         seq: 8
 
-  ddp: True
   num_grad_acc: 4
-
-  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sdvafnaweye/checkpoint/last.ckpt'
+  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/supamod/checkpoint.tar'
+  # restore_opt: true
