--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -1,18 +1,18 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
-  - override /train/data: easy_schedule
+  - override /train/data: mid_schedule
 
 train:
   ddp: true
 
   model:
-    num_experts: 4 # TODO: 8 experts
+    num_experts: 4
     num_gpus: 1
     top_k: 2
 
   optimizer:
-    lr: 1e-4 # 6.7e-5, 3.4e-5
+    lr: 6.7e-5 # 1e-4, 3.4e-5
     betas: [ 0.9, 0.99 ]
 
   scheduler:
@@ -26,5 +26,5 @@ train:
         seq: 6
 
   num_grad_acc: 4
-  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sgaman/checkpoint.tar'
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/sgaman/checkpoint.tar'
   restore_opt: false
