--- a/conf/experiment/vrt_moe_spy.yaml
+++ b/conf/experiment/vrt_moe_spy.yaml
@@ -11,6 +11,9 @@ train:
     embed_dims: [ 32, 32, 32, 32, 32, 64, 64 ]
     num_heads: [ 4, 4, 4, 4, 4, 8, 8 ]
 
+  optimizer:
+    lr: 1e-5
+
   data:
     batch_size: 4
     datasets:
