--- a/conf/experiment/vrt.yaml
+++ b/conf/experiment/vrt.yaml
@@ -3,7 +3,7 @@ defaults:
   - override /train/model: baby_vrt
 
 train:
-  ddp: False
+  ddp: true
   optimizer:
     lr: 1e-4
     betas: [ 0.9, 0.99 ]
@@ -12,6 +12,7 @@ train:
     eta_min: 1e-6
 
   data:
+    batch_size: 8
     datasets:
       train:
         seq: 6
