--- a/conf/experiment/basic_moe_gan.yaml
+++ b/conf/experiment/basic_moe_gan.yaml
@@ -33,6 +33,11 @@ train:
   adversarial_loss:
     weight: 2e-5
 
+  discriminator:
+    _target_: vsr.models.RealBasicVSR.modules.unet-discriminator.UNetDiscriminator
+    in_ch: 3
+    mid_ch: 32
+
   ddp: true
   num_grad_acc: 4
   freeze_epochs: 25
