--- a/conf/experiment/basic_moe_gan.yaml
+++ b/conf/experiment/basic_moe_gan.yaml
@@ -14,7 +14,7 @@ train:
 
     discriminator:
       _target_: torch.optim.Adam
-      lr: 1e-5
+      lr: 1e-4
 
   scheduler:
     generator:
@@ -24,11 +24,11 @@ train:
 
     discriminator:
       _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-      eta_min: 1e-5
+      eta_min: 1e-4
       verbose: False
 
   perceptual_loss:
-    weight: 1e-2
+    weight: 1.0
 
   adversarial_loss:
     weight: 2e-5
@@ -40,10 +40,10 @@ train:
 
   ddp: true
   num_grad_acc: 4
-  freeze_epochs: 25
+  freeze_epochs: 50
 
   restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/supagass/checkpoint.tar'
-  restore_opt: true
+  restore_opt: false
   finetune: true
 
 
