--- a/conf/experiment/basic_moe_gan.yaml
+++ b/conf/experiment/basic_moe_gan.yaml
@@ -27,11 +27,11 @@ train:
       eta_min: 1e-4
       verbose: False
 
-  perceptual_loss:
-    weight: 1.0
+  perceptual_loss: null
+  #  weight: 1.0
 
   adversarial_loss:
-    weight: 2e-5
+    weight: 1e-3
 
   discriminator:
     _target_: vsr.models.RealBasicVSR.modules.unet-discriminator.UNetDiscriminator
@@ -43,7 +43,7 @@ train:
   freeze_epochs: 50
 
   restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/supagass/checkpoint.tar'
-  restore_opt: false
+  restore_opt: true
   finetune: true
 
 
