--- a/conf/experiment/test.yaml
+++ b/conf/experiment/test.yaml
@@ -1,8 +1,8 @@
 # @package _global_
-cfg_dir: /home/aghinassi/Desktop/checkpoints/moe_vrt
+cfg_dir: /home/aghinassi/Desktop/checkpoints/basic_align
 lr_dir: /home/aghinassi/Desktop/compressed
 hr_dir: /home/aghinassi/Desktop/groundtruth
-out_dir: /home/aghinassi/Desktop
+out_dir: /home/aghinassi/hdd
 
 window_size: 32
 num_workers: 4
