--- a/conf/experiment/basic_spynet.yaml
+++ b/conf/experiment/basic_spynet.yaml
@@ -3,6 +3,9 @@ defaults:
   - override /train/model: baby_realbasic_spynet
 
 train:
+  model:
+    train_flow: true
+
   data:
     batch_size: 32
 
