--- a/conf/experiment/basic_spynet_gan.yaml
+++ b/conf/experiment/basic_spynet_gan.yaml
@@ -7,11 +7,44 @@ train:
   data:
     batch_size: 4
 
+  optimizer:
+    generator:
+      _target_: torch.optim.Adam
+      lr: 1e-5
+
+    discriminator:
+      _target_: torch.optim.Adam
+      lr: 1e-5
+
+  scheduler:
+    generator:
+      _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+      eta_min: 1e-6
+      verbose: False
+
+    discriminator:
+      _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+      eta_min: 1e-4
+      verbose: False
+
+  perceptual_loss: # null
+    weight: 1e-1
+
+  adversarial_loss:
+    weight: 1e-3
+
+  discriminator:
+    _target_: vsr.models.RealBasicVSR.modules.unet-discriminator.UNetDiscriminator
+    in_ch: 3
+    mid_ch: 32
+
   ddp: true
   num_grad_acc: 4
+  freeze_epochs: 15
 
-  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/opohfdd/checkpoint/last.ckpt'
-  # restore_opt: true
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/alaska/checkpoint.tar'
+  restore_opt: true
+  finetune: true
 
 
 
