--- a/conf/train/model/baby_realbasic_spynet.yaml
+++ b/conf/train/model/baby_realbasic_spynet.yaml
@@ -5,4 +5,4 @@ upscale: ${train.data.datasets.train.scale}
 res_blocks: 5
 k: 5
 pretrained_flow: "/home/aghinassi/Desktop/checkpoints/spynet.ckpt"
-train_flow: true
+train_flow: false
