--- a/conf/train/data/gan.yaml
+++ b/conf/train/data/gan.yaml
@@ -4,7 +4,7 @@ prefetch_factor: 8
 
 datasets:
   train:
-    _target_: vsr.dataset.DatasetVSR
+    _target_: vsrlab.vsr.dataset.DatasetVSR
     path: "/home/aghinassi/Desktop/MergedVSR"
     split: "train"
     seq: 12
@@ -28,7 +28,7 @@ datasets:
         keepdim: true
 
     lr_augmentation:
-      - _target_: core.augmentations.RandomJPEGCompression
+      - _target_: vsrlab.core.augmentations.RandomJPEGCompression
         quality: [ 50, 95 ]
 
       - _target_: kornia.augmentation.RandomGaussianNoise
@@ -45,10 +45,10 @@ datasets:
         keepdim: true
         p: 0.5
 
-      - _target_: core.augmentations.RandomJPEGCompression
+      - _target_: vsrlab.core.augmentations.RandomJPEGCompression
         quality: [ 60, 95 ]
 
-      - _target_: core.augmentations.RandomVideoCompression
+      - _target_: vsrlab.core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264' ]
         crf: [ 36, 38 ]
         fps: [ 30 ]
@@ -68,7 +68,7 @@ datasets:
         size: 256
 
     lr_augmentation:
-      - _target_: core.augmentations.RandomVideoCompression
+      - _target_: vsrlab.core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
         crf: [ 40 ]
         fps: [ 30 ]
