--- a/conf/train/model/spymoevrt.yaml
+++ b/conf/train/model/spymoevrt.yaml
@@ -1,21 +1,27 @@
-_target_: vsr.models.VRT.vrt.TinyVRT
+_target_: vsrlab.vsr.models.MoEVRT.spymoevrt.SPyMoEVRT
 upscale: ${train.data.datasets.train.scale}
 in_chans: 3
 out_chans: 3
-refine_steps: 5
-refine_blocks: 3
 refine_ch: 64
+refine_blocks: 3
+refine_steps: 5
 img_size: [ 6, 64, 64 ]
 window_size: [ 6, 8, 8 ]
 depths: [ 4, 4, 4, 4, 4, 4, 4 ]
 indep_reconsts: [ -2, -1 ]
 embed_dims: [ 32, 32, 32, 32, 32, 32, 32 ]
 num_heads: [ 4, 4, 4, 4, 4, 4, 4 ]
+num_experts: 4
+num_gpus: 1
+top_k: 2
 mul_attn_ratio: 0.75
 mlp_ratio: 2.
-qkv_bias: True
+qkv_bias: true
 qk_scale: null
 drop_path_rate: 0.2
-optical_flow_pretrained: True
+k: 5
+optical_flow_pretrained: "/home/aghinassi/Desktop/checkpoints/spynet.ckpt"
+return_levels: [ 2, 3, 4 ]
+optical_flow_train: False
 pa_frames: 2
 deformable_groups: 4
