--- a/conf/experiment/moevrt_cl.yaml
+++ b/conf/experiment/moevrt_cl.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 defaults:
-  - override /train/model: baby_vrt_moe
+  - override /train/model: moevrt
   - override /train/data: mid_schedule
 
 train:
