--- a/conf/experiment/spybasic.yaml
+++ b/conf/experiment/spybasic.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 defaults:
-  - override /train/model: baby_realbasic_spynet
+  - override /train/model: spybasicvsr
 
 train:
   model:
