--- a/conf/experiment/spymoevrt.yaml
+++ b/conf/experiment/spymoevrt.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 defaults:
-  - override /train/model: baby_vrt_moe_spy
+  - override /train/model: spymoevrt
 
 train:
   model:
