--- a/conf/experiment/spynet.yaml
+++ b/conf/experiment/spynet.yaml
@@ -11,7 +11,7 @@ train:
     prefetch_factor: 4
 
   cleaner:
-    _target_: core.modules.conv.IterativeRefinement
+    _target_: vsrlab.core.modules.conv.IterativeRefinement
     mid_ch: 64
     blocks: 3
     steps: 5
