--- a/conf/experiment/spyvrt.yaml
+++ b/conf/experiment/spyvrt.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 defaults:
-  - override /train/model: baby_vrt_spynet
+  - override /train/model: spyvrt
 
 train:
   ddp: True
