--- a/conf/train/gan.yaml
+++ b/conf/train/gan.yaml
@@ -1,12 +1,12 @@
 defaults:
   - data: gan
   - logger: default
-  - model: baby_realbasic
+  - model: basicvsr
   - optimizer: gan_adam
   - scheduler: gan_cosine
 
 metric:
-  _target_: core.metrics.MetricCollection
+  _target_: vsrlab.core.metrics.MetricCollection
   metrics:
     PSNR:
       _target_: piqa.PSNR
@@ -14,16 +14,16 @@ metric:
       _target_: piqa.SSIM
 
 discriminator:
-  _target_: vsr.models.RealBasicVSR.modules.unet-discriminator.UNetDiscriminator
+  _target_: vsrlab.vsr.models.RealBasicVSR.modules.unet-discriminator.UNetDiscriminator
   in_ch: 3
   mid_ch: 64
 
 perceptual_loss:
-  _target_: core.losses.PerceptualLoss
+  _target_: vsrlab.core.losses.PerceptualLoss
   weight: 1e-2
 
 adversarial_loss:
-  _target_: core.losses.AdversarialLoss
+  _target_: vsrlab.core.losses.AdversarialLoss
   weight: 2e-5
 
 seed_index: null
