--- a/conf/train/model/vrt.yaml
+++ b/conf/train/model/vrt.yaml
@@ -1,16 +1,13 @@
-_target_: vsrlab.vsr.models.VRT.vrt.TinyVRT
+_target_: vsrlab.vsr.models.VRT.vrt.VRT
 upscale: ${train.data.datasets.train.scale}
 in_chans: 3
 out_chans: 3
-refine_steps: 5
-refine_blocks: 3
-refine_ch: 64
 img_size: [ 6, 64, 64 ]
 window_size: [ 6, 8, 8 ]
-depths: [ 4, 4, 4, 4, 4, 4, 4 ]
+depths: [8, 8, 8, 8, 8, 8, 8, 4, 4, 4, 4, 4, 4]
 indep_reconsts: [ -2, -1 ]
-embed_dims: [ 32, 32, 32, 32, 32, 32, 32 ]
-num_heads: [ 4, 4, 4, 4, 4, 4, 4 ]
+embed_dims: [120, 120, 120, 120, 120, 120, 120, 180, 180, 180, 180, 180, 180]
+num_heads: [6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6]
 mul_attn_ratio: 0.75
 mlp_ratio: 2.
 qkv_bias: True
@@ -18,4 +15,4 @@ qk_scale: null
 drop_path_rate: 0.2
 optical_flow_pretrained: True
 pa_frames: 2
-deformable_groups: 4
+deformable_groups: 16
